# anjin

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
src/: driver.c
src/core/: core.c  core.h
src/core/input/: input.c  input.h  input_em.c  input_win32.c  keys.h  keys_em.h  keys_win32.h
src/core/thread/: thread.c  thread.h  thread_em.c  thread_win32.c
src/core/window/: window.c  window.h  window_em.c  window_win32.c
src/ecs/: ecs.c  ecs.h  type.c  type.h
src/ecs/c/: c.c  c.h  cl.c  cl.h
src/ecs/e/: e.c  e.h  em.c  em.h
src/ecs/q/: q.c  q.h
src/ecs/t/: t.c  t.h  tm.c  tm.h
src/game/: demo1.c  demo2.c  demo3.c  demo4.c  game.h  level.c  lose.c  title.c  win.c
src/game/catformer/: animation_tester.c  catformer.h  level.c  lose.c  title.c  win.c
src/game/demos/: demo0.c  demo1.c  demo2.c  demo3.c  demo4.c  demos.h
src/game/mafia_love/: init.c  init.h  main.c
src/game/mafia_love/cutscene/: cutscene.c  lose.c  score.c  title.c  win.c
src/game/mafia_love/cutscene/cutscenes/: cutscene_1.c  cutscene_2.c  cutscene_3.c  cutscene_prologue.c
src/game/mafia_love/input/: input.c
src/game/mafia_love/level/: bullet.c  level.c
src/game/mafia_love/mgfx/: eDisk.c  edisk.h  mgfx.c
src/game/mafia_love/mmath/: mmath.c
src/game/mafia_love/sound/: sound.c  sound.h
src/game/space_catet/: level.c  lose.c  space_catet.h  title.c  win.c
src/gfx/: gfx.c  gfx.h
src/gl/: gl_util.c  gl_util.h  gl_util_em.c  gl_util_win32.c  gll.c  gll.h  gll_em.c  gll_win32.c  shader.c  shader.h  texture.c  texture.h
src/log/: log.c  log.h
src/snd/: snd.c  snd.h  wav.c  wav.h
src/txt/: txt.c  txt.h
